--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+
+
+
+# Ignore coverage reports
+
+./get hire info.txt
+.get hire info.txt
+
