--- a/backend/gethire/package.json
+++ b/backend/gethire/package.json
@@ -27,8 +27,10 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "bcrypt": "^5.1.1",
+    "buffer-to-stream": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cloudinary": "^2.6.0",
     "dotenv": "^16.5.0",
     "mongoose": "^8.13.2",
     "nodemailer": "^6.10.1",
@@ -42,9 +44,11 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/buffer-to-stream": "^1.0.3",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.17",
     "@types/supertest": "^6.0.0",
